--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="layui/css/layui.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/home.css">
     <script src="jquery.min.js"></script>
     <script src="layui/layui.js"></script>
     <script src="bootstrap.js"></script>
@@ -145,9 +144,6 @@
 <body style="background: url(bj.jpg) no-repeat center center;background-size: contain">
 <div>
     <div id="content">
-        <button id="set-parames" onclick="homeMethod.setTime()" style="background: none; font-size: 10px; color: grey;border: none; margin-top: 30px; margin-left: 15px ">设置</button>
-        <a style="margin-left: 20px" href="javascript:homeMethod.cloneScreen()">关闭</a>
-        <!--<button id="full-screen" onclick="homeMethod.fullScreen()" style="background: none; font-size: 24px;border: none; margin-top: 30px; margin-left: 15px ">退出</button>-->
         <div class="ind_box" id="index-box">
             <div class="ind_juli">
                 距离<span id="mnian">2018</span>年<span id="myue">08</span>月<span id="mri">23</span>日开幕
@@ -158,7 +154,10 @@
             <div class="ind_juli" style="font-size: 65px;">
                 今天<span id="nian"></span>年<span id="yue"></span>月<span id="ri"></span>日
             </div>
-
+            <div style="margin-top: 62%; margin-left: 55%">
+                <a style="font-size: 20px" href="javascript:homeMethod.cloneScreen()">关闭</a>
+                <button id="set-parames" onclick="homeMethod.setTime()" style="background: none; margin-left: 45px; font-size: 20px; color: #428bca;border: none; ">设置</button>
+            </div>
         </div>
     </div>
 </div>
