--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -141,7 +141,7 @@
     </style>
 </head>
 
-<body style="background: url(bj.jpg) no-repeat center center;background-size: contain">
+<body style="background: url(bj.jpg) no-repeat center center;background-size: contain" id="mybody">
 <div>
     <div id="content">
         <div class="ind_box" id="index-box">
